chore: add toggle todo completion in api
